--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+appdirs==1.4.3
 attrs==19.3.0
 Automat==20.2.0
+autopep8==1.5
 backcall==0.1.0
 bleach==3.1.1
+cached-property==1.5.1
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
@@ -24,11 +27,12 @@ ipykernel==5.1.4
 ipython==7.12.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+isodate==0.6.0
 jedi==0.16.0
 Jinja2==2.11.1
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.4
+jupyter-client==6.0.0
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.1.0
@@ -37,12 +41,15 @@ lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mistune==0.8.4
+more-itertools==8.2.0
 mpld3==0.3
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
 numpy==1.18.1
+opencv-python==4.2.0.32
 packaging==20.1
+pandas==1.0.1
 pandocfilters==1.4.2
 parsel==1.5.2
 parso==0.6.1
@@ -51,12 +58,15 @@ picamera==1.13
 pickleshare==0.7.5
 pigpio==1.45
 pip-upgrader==1.4.15
+pluggy==0.13.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.3
 Protego==0.1.16
 ptyprocess==0.6.0
+py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.5.0
 pycparser==2.19
 PyDispatcher==2.0.5
 Pygments==2.5.2
@@ -64,11 +74,14 @@ PyHamcrest==2.0.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
 pyrsistent==0.15.7
+pytest==5.3.5
 python-dateutil==2.8.1
+pytz==2019.3
 pyzmq==18.1.1
 qtconsole==4.6.0
 queuelib==1.5.0
 requests==2.23.0
+requests-toolbelt==0.9.1
 RPi.GPIO==0.7.0
 RPIO==0.10.0
 Scrapy==1.8.0
@@ -87,4 +100,5 @@ watermark==2.0.2
 wcwidth==0.1.8
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+zeep==3.4.0
 zope.interface==4.7.1
