--- a/pub400/requirements.txt
+++ b/pub400/requirements.txt
@@ -4,10 +4,14 @@ backcall==0.1.0
 bcrypt==3.1.4
 bleach==3.1.1
 bottle==0.12.17
+certifi==2019.11.28
 cffi==1.11.5
-cryptography==2.3
+chardet==3.0.4
+colorclass==2.2.0
+cryptography==2.2.2
 decorator==4.4.2
 defusedxml==0.6.0
+docopt==0.6.2
 entrypoints==0.3
 ibm-db==2.0.5.12
 idna==2.8
@@ -32,12 +36,14 @@ nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
 numpy==1.15.4
+packaging==20.3
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.6.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==6.2.0
+Pillow==5.0.0
+pip-upgrader==1.4.15
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 psutil==5.5.1
@@ -46,20 +52,24 @@ pycparser==2.19
 Pygments==2.6.1
 PyNaCl==1.2.1
 pyodbc==4.0.27
+pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.7.5
 pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.7.1
 QtPy==1.9.0
+requests==2.23.0
 scikit-learn==0.19.1
 scipy==1.1.0
 Send2Trash==1.5.0
-six==1.10.0
+six==1.14.0
 terminado==0.8.3
+terminaltables==3.1.0
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
+urllib3==1.25.8
 watermark==2.0.2
 wcwidth==0.1.8
 webencodings==0.5.1
