--- a/pi10/requirements.txt
+++ b/pi10/requirements.txt
@@ -1,56 +1,73 @@
-Adafruit-Blinka==2.3.2
-adafruit-circuitpython-74hc595==1.0.2
-adafruit-circuitpython-busdevice==4.0.0
-adafruit-circuitpython-charlcd==3.2.1
-adafruit-circuitpython-mcp230xx==2.2.0
-Adafruit-PlatformDetect==1.3.2
-Adafruit-PureIO==0.2.3
-attrs==19.1.0
+Adafruit-Blinka==4.8.1
+adafruit-circuitpython-74hc595==1.1.1
+adafruit-circuitpython-busdevice==4.3.1
+adafruit-circuitpython-charlcd==3.3.1
+adafruit-circuitpython-mcp230xx==2.3.1
+Adafruit-PlatformDetect==2.11.1
+Adafruit-PureIO==1.1.5
+attrs==19.3.0
 backcall==0.1.0
-bleach==3.1.4
-decorator==4.4.0
+bleach==3.1.5
+certifi==2020.4.5.1
+chardet==3.0.4
+colorclass==2.2.0
+decorator==4.4.2
 defusedxml==0.6.0
+docopt==0.6.2
 entrypoints==0.3
-ipykernel==5.1.2
-ipython==7.7.0
+idna==2.9
+importlib-metadata==1.6.0
+ipykernel==5.2.1
+ipython==7.14.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi==0.15.1
-Jinja2==2.10.1
-jsonschema==3.0.2
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-core==4.5.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 MarkupSafe==1.1.1
 mistune==0.8.4
-nbconvert==5.6.0
-nbformat==4.4.0
-notebook==6.0.1
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
+packaging==20.3
 pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
+parso==0.7.0
+pexpect==4.8.0
 picamera==1.13
 pickleshare==0.7.5
+pip-upgrader==1.4.15
 pkg-resources==0.0.0
 prometheus-client==0.7.1
-prompt-toolkit==2.0.9
+prompt-toolkit==3.0.5
 ptyprocess==0.6.0
-Pygments==2.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
-pyzmq==18.1.0
-qtconsole==4.5.4
-rpi-ws281x==4.2.2
+pyftdi==0.51.2
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+pyserial==3.4
+python-dateutil==2.8.1
+pyusb==1.0.2
+pyzmq==19.0.1
+qtconsole==4.7.4
+QtPy==1.9.0
+requests==2.23.0
+rpi-ws281x==4.2.3
 RPi.GPIO==0.7.0
 Send2Trash==1.5.0
-six==1.12.0
+six==1.14.0
 spidev==3.4
-sysv-ipc==1.0.0
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.3
-traitlets==4.3.2
-wcwidth==0.1.7
+sysv-ipc==1.0.1
+terminado==0.8.3
+terminaltables==3.1.0
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+zipp==3.1.0
