--- a/pi09/requirements.txt
+++ b/pi09/requirements.txt
@@ -1,12 +1,14 @@
 appdirs==1.4.4
-attrs==19.3.0
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
 Automat==20.2.0
-autopep8==1.5.2
-backcall==0.1.0
-bleach==3.1.5
-cached-property==1.5.1
-certifi==2020.4.5.1
-cffi==1.14.0
+autopep8==1.5.4
+backcall==0.2.0
+bleach==3.2.1
+cached-property==1.5.2
+certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 colorclass==2.2.0
 colorzero==1.1
@@ -14,93 +16,103 @@ constantly==15.1.0
 cryptography==3.2
 cssselect==1.1.0
 cycler==0.10.0
-Cython==0.29.17
+Cython==0.29.21
 decorator==4.4.2
 defusedxml==0.6.0
 docopt==0.6.2
 entrypoints==0.3
 gpiozero==1.5.1
-hyperlink==19.0.0
-idna==2.9
-importlib-metadata==1.6.0
+hyperlink==20.0.1
+idna==2.10
+importlib-metadata==2.1.0
 incremental==17.5.0
-ipykernel==5.2.1
-ipython==7.14.0
+iniconfig==1.1.1
+ipykernel==5.3.4
+ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 isodate==0.6.0
-jedi==0.17.0
+itemadapter==0.2.0
+itemloaders==1.0.4
+jedi==0.17.2
 Jinja2==2.11.2
+jmespath==0.10.0
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-kiwisolver==1.2.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+kiwisolver==1.3.1
 linux-metrics==0.1.4
-lxml==4.5.0
+lxml==4.6.2
 MarkupSafe==1.1.1
-matplotlib==3.2.1
+matplotlib==3.3.3
 mistune==0.8.4
-more-itertools==8.3.0
-mpld3==0.3
-nbconvert==5.6.1
-nbformat==5.0.6
+more-itertools==8.6.0
+mpld3==0.5.2
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
 notebook==6.1.5
-numpy==1.18.4
-packaging==20.3
-pandocfilters==1.4.2
+numpy==1.19.4
+packaging==20.7
+pandocfilters==1.4.3
 parsel==1.6.0
-parso==0.7.0
+parso==0.7.1
 pexpect==4.8.0
 picamera==1.13
 pickleshare==0.7.5
 pigpio==1.46
+Pillow==8.0.1
 pip-upgrader==1.4.15
 pkg-resources==0.0.0
 pluggy==0.13.1
 prometheus-client==0.7.1
-prompt-toolkit==3.0.5
+prompt-toolkit==3.0.8
 Protego==0.1.16
 ptyprocess==0.6.0
-py==1.8.1
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 PyDispatcher==2.0.5
-Pygments==2.6.1
+Pygments==2.7.2
 PyHamcrest==2.0.2
-pyOpenSSL==19.1.0
+pyOpenSSL==20.0.0
 pyparsing==2.4.7
-pyrsistent==0.16.0
-pytest==5.4.2
+pyrsistent==0.17.3
+pytest==6.1.2
 python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.1
-qtconsole==4.7.4
+pytz==2020.4
+pyzmq==20.0.0
+qtconsole==5.0.1
 QtPy==1.9.0
 queuelib==1.5.0
-requests==2.23.0
+requests==2.25.0
+requests-file==1.5.1
 requests-toolbelt==0.9.1
 RPi.GPIO==0.7.0
 RPIO==0.10.0
-Scrapy==2.1.0
+Scrapy==2.4.1
 Send2Trash==1.5.0
 service-identity==18.1.0
-six==1.14.0
-terminado==0.8.3
+six==1.15.0
+terminado==0.9.1
 terminaltables==3.1.0
 testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
 Twisted==20.3.0
-urllib3==1.25.9
+urllib3==1.26.2
 w3lib==1.22.0
-watermark==2.0.2
-wcwidth==0.1.9
+watermark==2.1.0
+wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-zeep==3.4.0
-zipp==3.1.0
-zope.interface==5.1.0
+zeep==4.0.0
+zipp==3.4.0
+zope.interface==5.2.0
