--- a/beaglebone/requirements.txt
+++ b/beaglebone/requirements.txt
@@ -1,81 +1,90 @@
-Adafruit-BBIO==1.1.1
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.4
-certifi==2019.11.28
+Adafruit-BBIO==1.2.0
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.2.1
+certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
-Click==7.0
-colorama==0.4.3
+click==7.1.2
+colorama==0.4.4
 colorclass==2.2.0
 cycler==0.10.0
-Cython==0.29.15
-decorator==4.4.1
+Cython==0.29.21
+decorator==4.4.2
 defusedxml==0.6.0
 docopt==0.6.2
 docutils==0.16
 entrypoints==0.3
-Flask==1.1.1
-html5lib==1.0.1
-idna==2.9
-ipykernel==5.1.4
-ipython==7.12.0
+Flask==1.1.2
+html5lib==1.1
+idna==2.10
+ipykernel==5.3.4
+ipython==7.19.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
-jedi==0.16.0
-Jinja2==2.11.1
+jedi==0.17.2
+Jinja2==2.11.2
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.0.0
-jupyter-console==6.1.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
 jupyter-contrib-core==0.3.3
-jupyter-core==4.6.3
+jupyter-core==4.7.0
 jupyter-highlight-selected-word==0.2.0
 jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
-kiwisolver==1.1.0
+jupyterlab-pygments==0.1.2
+kiwisolver==1.3.1
 libtiff==0.4.2
 MarkupSafe==1.1.1
-matplotlib==3.1.3
+matplotlib==3.3.3
 mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
 notebook==6.1.5
-numpy==1.18.1
-packaging==20.1
+numpy==1.19.4
+packaging==20.7
 pandoc==1.0.2
-pandocfilters==1.4.2
-parso==0.6.1
+pandocfilters==1.4.3
+parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.0.1
 pip-upgrader==1.4.15
 ply==3.11
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
 ptyprocess==0.6.0
-Pygments==2.5.2
-pyparsing==2.4.6
-pyrsistent==0.15.7
+pycparser==2.20
+Pygments==2.7.2
+pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3
-pyzmq==19.0.0
-qtconsole==4.6.0
-requests==2.23.0
+pytz==2020.4
+PyYAML==5.3.1
+pyzmq==20.0.0
+qtconsole==5.0.1
+QtPy==1.9.0
+requests==2.25.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
-sip==5.1.1
-six==1.14.0
-terminado==0.8.3
+sip==5.5.0
+six==1.15.0
+terminado==0.9.1
 terminaltables==3.1.0
 testpath==0.4.4
-toml==0.10.0
-tornado==6.0.3
-traitlets==4.3.3
-urllib3==1.25.8
-watermark==2.0.2
-wcwidth==0.1.8
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.26.2
+watermark==2.1.0
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.0
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wincertstore==0.2
